# saraswati.learn.study

./: .cspell.json  .editorconfig  .gitignore  .jscpd.json  .markdownlint.yaml  .mega-linter.yml  .pre-commit-config.yaml  .secretlintignore  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  b  be.yaml  build.sh  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yaml  dependency-review.yml  greetings.yaml  mega-linter.yaml  preview.yaml  scorecards.yml
docs/: README.md  SECURITY.md  directories.md  ideas-ToDo.md  principles.md  technology.md
etc/: words.txt
learn/computers/operating-system/: README.en.md
learn/computers/setup/concepts/: codelab.en.md
learn/computers/setup/editor/: codelab.en.md
learn/computers/setup/keyboard/: codelab.en.md
learn/computers/setup/vscode.dev/: codelab.en.md
learn/meta/about/: README.md
learn/meta/compare/: README.md
site/: index.html  main.css
